[Admin] Fix photo upload and visible in front

--- a/front/src/app/pages/national-team/senior/coach/senior-national-team-coach-detail.component.scss
+++ b/front/src/app/pages/national-team/senior/coach/senior-national-team-coach-detail.component.scss
@@ -116,7 +116,7 @@
 
     span {
       color: #6c7a92;
-      font-size: 0.83rem;
+      font-size: 0.75rem;
       display: block;
       margin-bottom: 0.3rem;
     }
